force-app/main/default/objects/Asset_Creation_Result__e/Asset_Creation_Result__e.object-meta.xml
<CustomObject>
    <label>Asset Creation Result</label>
    <pluralLabel>Asset Creation Results</pluralLabel>
</CustomObject>