force-app/main/default/objects/Asset_Creation_Result__e/fields/Asset_Count__c.field-meta.xml
<CustomField>
    <fullName>Asset_Count__c</fullName>
    <description>Number of assets created (0 on error or no hardware lines).</description>
    <label>Asset Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>