force-app/main/default/objects/Asset_Creation_Result__e/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Human-readable message to display in the toast.</description>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>