force-app/main/default/objects/Asset_Creation_Result__e/fields/Quote_Id__c.field-meta.xml
<CustomField>
    <fullName>Quote_Id__c</fullName>
    <description>The Id of the Quote that triggered the asset creation attempt.</description>
    <label>Quote Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>