force-app/main/default/objects/Asset_Creation_Result__e/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Success, Error, or NoHardware.</description>
    <label>Status</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>